<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Balance</string>
<string name="about_comments">Easily check your prepaid balance</string>






<string-array name="about_authors"><item>Tanuj Mittal</item>
</string-array>
<string-array name="about_artists"><item>www.androidicons.com</item>
<item>www.android-ui-utils.googlecode.com</item>
</string-array>
<string name="about_email">free2talk.183@gmail.com</string>
<string name="about">About</string>
<string name="title">Check Prepaid Balance</string>
<string name="sms">Free SMS</string>
<string name="pre_balance">Prepaid Balance</string>
<string name="min">Free minutes</string>

<string name="settings">Settings</string>
<string name="taptochange">Tap to change</string>
<string name="ussd">Enter USSD code</string>
</resources>
