<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
android:id="@+id/widget38"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<TextView
android:id="@+id/tv1"
android:layout_width="300px"
android:layout_height="34px"
android:text="@string/title"
android:textSize="20sp"
android:layout_x="10px"
android:layout_y="0px"
>
</TextView>
<Button
android:id="@+id/b2"
android:layout_width="175px"
android:layout_height="wrap_content"
android:text="@string/sms"
android:textSize="16sp"
android:layout_x="73px"
android:layout_y="188px"
>
</Button>
<Button
android:id="@+id/b1"
android:layout_width="175px"
android:layout_height="wrap_content"
android:text="@string/pre_balance"
android:textSize="16sp"
android:layout_x="73px"
android:layout_y="128px"
>
</Button>
<Button
android:id="@+id/b3"
android:layout_width="175px"
android:layout_height="wrap_content"
android:text="@string/min"
android:textSize="16sp"
android:layout_x="73px"
android:layout_y="248px"
>
</Button>
</AbsoluteLayout>